# agentnative-cli

./: .markdownlint-cli2.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASES.md  build.rs  cliff.toml  deny.toml  rust-toolchain.toml
.context/compound-engineering/todos/: 001-pending-p3-source-common-layer.md
.github/ISSUE_TEMPLATE/: config.yml  false-positive.yml  feature-request.yml  grade-a-cli.yml  pressure-test.yml  scoring-bug.yml  spec-question.yml
.github/rulesets/: protect-dev.json  protect-main.json
.github/workflows/: ci.yml  finalize-release.yml  guard-main-provenance.yml  guard-release-branch.yml  release.yml  skill-fixture-drift.yml
build_support/: parser.rs
completions/: agentnative.bash  agentnative.elvish  agentnative.fish  agentnative.powershell  agentnative.zsh  anc.bash  anc.elvish  anc.fish  anc.powershell  anc.zsh
coverage/: matrix.json
docs/: coverage-matrix.md  solutions
docs/plans/: 2026-03-31-001-feat-check-trait-project-behavioral-plan.md  2026-04-01-001-feat-v01-completion-plan.md  2026-04-02-002-feat-release-infrastructure-plan.md  2026-04-02-003-feat-cli-default-subcommand-and-command-flag-plan.md  2026-04-02-004-feat-python-checks-validation-coverage-plan.md  2026-04-17-001-feat-multi-language-source-checks-plan.md  2026-04-20-v011-handoff-1-agentnative-impl.md  2026-04-20-v011-handoff-2-site-spec-coverage.md  2026-04-20-v011-handoff-3-scorecard-regen.md  2026-04-20-v012-handoff-4-behavioral-checks.md  2026-04-20-v013-handoff-5-audience-leaderboard.md  2026-04-21-v012-h4-eng-agent-handoff.md  2026-04-21-v013-handoff-5-cli-audience-classifier.md  2026-04-23-001-feat-spec-vendor-plan.md  2026-04-28-001-feat-show-hn-launch-readiness-plan.md  2026-04-29-001-feat-scorecard-schema-metadata-plan.md  2026-04-29-002-feat-skill-subcommand-plan.md  2026-04-30-001-feat-spec-output-envelope-shoulds-plan.md
docs/plans/spikes/: 2026-04-17-multi-language-source-checks-spike.md  2026-04-17-p1-non-interactive-check-gap.md  2026-04-17-session-handoff.md  2026-04-20-p1-doctrine-call-handoff.md
scripts/: generate-completions.sh  sync-skill-fixture.sh  sync-spec.sh
scripts/hooks/: pre-push
src/: argv.rs  build_info.rs  check.rs  cli.rs  error.rs  main.rs  project.rs  runner.rs  scorecard.rs  skill_install.rs  source.rs  types.rs
src/checks/: global_flags.rs  mod.rs  no_color.rs  unwrap.rs
src/checks/behavioral/: bad_args.rs  env_hints.rs  flag_existence.rs  help.rs  json_output.rs  mod.rs  no_color.rs  no_pager_behavioral.rs  non_interactive.rs  quiet.rs  sigpipe.rs  version.rs
src/checks/project/: agents_md.rs  completions.rs  dependencies.rs  dry_run.rs  error_module.rs  mod.rs  non_interactive.rs  output_module.rs
src/checks/source/: mod.rs
src/checks/source/python/: bare_except.rs  mod.rs  no_color.rs  sys_exit.rs
src/checks/source/rust/: env_flags.rs  error_types.rs  exit_codes.rs  global_flags.rs  headless_auth.rs  mod.rs  naked_println.rs  no_color.rs  no_pager.rs  output_clamping.rs  output_module.rs  process_exit.rs  structured_output.rs  timeout_flag.rs  try_parse.rs  tty_detection.rs  unwrap.rs
src/principles/: matrix.rs  mod.rs  registry.rs
src/principles/spec/: README.md
src/runner/: help_probe.rs  mod.rs
src/runner/help_probe/: env_hints_bash.rs  mod.rs
src/scorecard/: audience.rs  mod.rs
tests/: build_parser.rs  dogfood.rs  integration.rs  scorecard_metadata_security.rs  scorecard_schema_v04.rs  scorecard_schema_v05.rs  skill_install.rs
tests/fixtures/binary-only/: test.sh
tests/fixtures/broken-python/: pyproject.toml
tests/fixtures/broken-python/src/: app.py
tests/fixtures/broken-rust/: Cargo.toml
tests/fixtures/broken-rust/src/: main.rs
tests/fixtures/hostile-hang/: probe.sh
tests/fixtures/hostile-nonzero-exit/: probe.sh
tests/fixtures/hostile-stdout-flood/: probe.sh
tests/fixtures/perfect-rust/: Cargo.toml
tests/fixtures/perfect-rust/src/: error.rs  main.rs  output.rs
tests/fixtures/source-only/: Cargo.toml
tests/fixtures/source-only/src/: error.rs  main.rs
