[package]
name = "agentnative"
version = "0.1.0"
edition = "2024"
description = "The agent-native CLI linter — check whether your CLI follows agent-readiness principles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brettdavies/agentnative-cli"
homepage = "https://anc.dev"
documentation = "https://docs.rs/agentnative"
keywords = ["cli", "linter", "agent", "ast-grep", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Brett Davies <pm8fp22mbg@privaterelay.appleid.com>"]
readme = "README.md"
rust-version = "1.88"
exclude = [
    ".claude/",
    ".context/",
    ".github/",
    ".markdownlint-cli2.yaml",
    "cliff.toml",
    "deny.toml",
    "docs/",
    "rustfmt.toml",
    "scripts/",
    "tests/",
]

[[bin]]
name = "anc"
path = "src/main.rs"

[dependencies]
# AST pattern matching — pinned pre-1.0
ast-grep-core = { version = "=0.42.0" }
ast-grep-language = { version = "=0.42.0", default-features = false, features = [
    "tree-sitter-rust",
    "tree-sitter-python",
] }

# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }
clap_complete = "4"

# Manifest parsing
toml = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1"
thiserror = "2"

# Platform
libc = "0.2"

# RFC 3339 timestamps for scorecard `run.started_at`. Pinned exact (pre-1.0
# convention). `formatting` feature enables `OffsetDateTime::format` with the
# `Rfc3339` well-known description; default `std` feature is required for
# `OffsetDateTime::now_utc`.
time = { version = "=0.3.47", default-features = false, features = ["std", "formatting"] }

[build-dependencies]
# Vendored spec frontmatter parser (build.rs → $OUT_DIR/generated_requirements.rs).
# serde_yaml is deprecated upstream but still functional; pinned tightly.
# Re-evaluate (saphyr / yaml-rust2) if cargo-deny flags it.
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "=0.9.34"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
# Used by tests/build_parser.rs to exercise the build_support/parser.rs module.
serde_yaml = "=0.9.34"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/agentnative-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/agentnative-{ target }.zip"
pkg-fmt = "zip"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
